tests/baselines/reference/APISample_jsdoc.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8515,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8515,40): error TS1005: ';' expected.
typescript_standalone.d.ts(8971,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8971,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9231,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9231,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9581,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9581,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9605,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9605,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9692,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9692,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10857,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10857,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10868,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10868,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10878,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10878,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10953,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10953,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11010,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11010,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11064,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11064,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11084,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11084,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11094,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11094,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11128,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11128,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11131,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11131,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11135,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11135,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11153,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11153,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11179,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11179,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11182,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11182,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11194,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11194,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11224,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11224,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11258,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11258,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11269,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11269,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11293,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11293,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11301,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11301,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11305,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11305,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11335,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11335,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11378,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11378,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11573,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11573,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11575,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11575,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11579,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11579,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11594,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11594,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11596,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11596,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11598,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11598,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11600,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11600,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11602,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11602,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11604,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11604,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11606,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11606,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11608,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11608,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11610,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11610,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11612,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11612,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11614,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11614,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11616,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11616,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11626,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11626,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11628,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11628,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11630,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11630,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11632,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11632,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11634,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11634,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11636,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11636,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11638,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11638,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11640,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11640,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11642,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11642,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11714,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11714,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11716,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11716,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11718,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11718,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11759,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11759,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_jsdoc.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. The original sources can be found
     *       at: https://github.com/YousefED/typescript-json-schema
     *           https://github.com/vega/ts-json-schema-generator
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var console: any;
    
    import * as ts from "typescript";
    
    // excerpted from https://github.com/YousefED/typescript-json-schema
    // (converted from a method and modified; for example, `this: any` to compensate, among other changes)
    function parseCommentsIntoDefinition(this: any,
                                         symbol: ts.Symbol,
                                         definition: {description?: string, [s: string]: string | undefined},
                                         otherAnnotations: { [s: string]: true}): void {
        if (!symbol) {
            return;
        }
    
        // the comments for a symbol
        let comments = symbol.getDocumentationComment(undefined);
    
        if (comments.length) {
            definition.description = comments.map(comment => comment.kind === "lineBreak" ? comment.text : comment.text.trim().replace(/\r\n/g, "\n")).join("");
        }
    
        // jsdocs are separate from comments
        const jsdocs = symbol.getJsDocTags();
        jsdocs.forEach(doc => {
            // if we have @TJS-... annotations, we have to parse them
            const { name, text } = doc;
            if (this.userValidationKeywords[name]) {
                definition[name] = this.parseValue(text);
            } else {
                // special annotations
                otherAnnotations[doc.name] = true;
            }
        });
    }
    
    
    // excerpted from https://github.com/vega/ts-json-schema-generator
    export interface Annotations {
        [name: string]: any;
    }
    function getAnnotations(this: any, node: ts.Node): Annotations | undefined {
        const symbol: ts.Symbol = (node as any).symbol;
        if (!symbol) {
            return undefined;
        }
    
        const jsDocTags: ts.JSDocTagInfo[] = symbol.getJsDocTags();
        if (!jsDocTags || !jsDocTags.length) {
            return undefined;
        }
    
        const annotations: Annotations = jsDocTags.reduce((result: Annotations, jsDocTag: ts.JSDocTagInfo) => {
            const value = this.parseJsDocTag(jsDocTag);
            if (value !== undefined) {
                result[jsDocTag.name] = value;
            }
    
            return result;
        }, {});
        return Object.keys(annotations).length ? annotations : undefined;
    }
    
    // these examples are artificial and mostly nonsensical
    function parseSpecificTags(node: ts.Node) {
        if (node.kind === ts.SyntaxKind.Parameter) {
            return ts.getJSDocParameterTags(node as ts.ParameterDeclaration);
        }
        if (node.kind === ts.SyntaxKind.FunctionDeclaration) {
            const func = node as ts.FunctionDeclaration;
            if (ts.hasJSDocParameterTags(func)) {
                const flat: ts.JSDocTag[] = [];
                for (const tags of func.parameters.map(ts.getJSDocParameterTags)) {
                    if (tags) flat.push(...tags);
                }
                return flat;
            }
        }
    }
    
    function getReturnTypeFromJSDoc(node: ts.Node) {
        if (node.kind === ts.SyntaxKind.FunctionDeclaration) {
            return ts.getJSDocReturnType(node);
        }
        let type = ts.getJSDocType(node);
        if (type && type.kind === ts.SyntaxKind.FunctionType) {
            return (type as ts.FunctionTypeNode).type;
        }
    }
    
    function getAllTags(node: ts.Node) {
        ts.getJSDocTags(node);
    }
    
    function getSomeOtherTags(node: ts.Node) {
        const tags: (ts.JSDocTag | undefined)[] = [];
        tags.push(ts.getJSDocAugmentsTag(node));
        tags.push(ts.getJSDocClassTag(node));
        tags.push(ts.getJSDocReturnTag(node));
        const type = ts.getJSDocTypeTag(node);
        if (type) {
            tags.push(type);
        }
        tags.push(ts.getJSDocTemplateTag(node));
        return tags;
    }
    